# lang

make/: Makefile
python/applications/reference-application/: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml  pyvenv.cfg
python/applications/reference-application/ref_app/: app.py  mod1.py
python/applications/why-src/flat_layout/: pyproject.toml
python/applications/why-src/flat_layout/mainpkg/: main.py
python/applications/why-src/flat_layout/pkg1/: p1.py
python/applications/why-src/flat_layout/pkg2/: p2.py
python/applications/why-src/src_layout/: p2.py  pyproject.toml
python/applications/why-src/src_layout/src/: p1.py  p2.py
python/applications/why-src/src_layout/src/mainpkg/: main.py
python/applications/why-use-src-layout/: README.md
